--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -31,7 +31,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: 'Host(`app.luminate.co.nz`)'
+      rule: 'Host(`portal.luminate.co.nz`)'
       entryPoints:
         - web-secure
       middlewares:
@@ -42,7 +42,7 @@ http:
         certResolver: letsencrypt
 
     flower-secure-router:
-      rule: 'Host(`app.luminate.co.nz`)'
+      rule: 'Host(`portal.luminate.co.nz`)'
       entryPoints:
         - flower
       service: flower
@@ -51,7 +51,7 @@ http:
         certResolver: letsencrypt
 
     web-media-router:
-      rule: 'Host(`app.luminate.co.nz`) && PathPrefix(`/media/`)'
+      rule: 'Host(`portal.luminate.co.nz`) && PathPrefix(`/media/`)'
       entryPoints:
         - web-secure
       middlewares:
