--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,4 +184,5 @@ dependencies = [
     "uvicorn-worker==0.4.0",
     "uvicorn[standard]==0.37.0",
     "whitenoise==6.11.0",
+    "django-role-permissions==3.2.0",
 ]
