--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
     hooks:
       # Linter
       - id: ruff-check
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --exit-non-zero-on-fix, '--ignore', 'ERA001']
       # Formatter
       - id: ruff-format
 
@@ -41,9 +41,9 @@ repos:
     rev: v1.36.4
     hooks:
       - id: djlint-reformat-django
-        args: ['--ignore', 'H021,COMB12,ISC001']
+        args: ['--ignore', 'H021,COMB12,ISC001,ERA001']
       - id: djlint-django
-        args: ['--ignore', 'H021,COMB12,ISC001']
+        args: ['--ignore', 'H021,COMB12,ISC001,ERA001']
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
