--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,6 +143,7 @@ dev = [
     "pytest==8.4.2",
     "pytest-django==4.11.1",
     "pytest-sugar==1.1.1",
+    "pytest-mock==3.6.1",
     "ruff==0.14.0",
     "sphinx==8.2.3",
     "sphinx-autobuild==2025.8.25",
@@ -185,4 +186,8 @@ dependencies = [
     "uvicorn[standard]==0.37.0",
     "whitenoise==6.11.0",
     "django-role-permissions==3.2.0",
+    "cryptography>=41.0.0",
+    "asgiref==3.8.1",
+    "channels==4.1.0",
+    "channels-redis==4.2.0",
 ]
